--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.5.0",
+    "antd-mobile": "^2.3.4",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-icons": "^4.2.0",
     "umi": "^3.5.13"
   },
   "devDependencies": {
